# strongswan

./: README.md  configure.ac
.github/workflows/: android2.yml
scripts/: test.sh
src/cert-enroll/: .gitignore  Makefile.am  cert-enroll.8.in  cert-enroll.conf  cert-enroll.in  cert-enroll.service.in  cert-enroll.timer  cert-install.conf.in
testing/scripts/recipes/: 011_botan.mk
